Fix bug with minus operator that wrapped the line

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ body {
   align-items: center;
   justify-content: end;
   overflow: hidden;
+  white-space: nowrap;
 }
 
 .buttons-grid {
